<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
	android:background="#FFFFFF"
    android:orientation="vertical" >

    <EditText
        android:id="@+id/email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_alignTop="@+id/lblEmail"
        android:layout_marginTop="29dp"
        android:ems="10"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:textSize="25sp" >
    </EditText>

    <TextView
        android:id="@+id/lblPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/lblEmail"
        android:layout_below="@+id/email"
        android:layout_marginTop="13dp"
        android:text="@string/password"
        android:textSize="25sp" />

    <TextView
        android:id="@+id/lblEmail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_centerVertical="true"
        android:layout_marginLeft="12dp"
        android:text="@string/email"
        android:textSize="25sp" />

    <EditText
        android:id="@+id/password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/lblPassword"
        android:ems="10"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:textSize="25sp" >
    </EditText>

    <Button
        android:id="@+id/register"
        style="@style/ButtonText"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/lblPassword"
        android:layout_below="@+id/password"
        android:layout_marginLeft="18dp"
        android:layout_marginTop="26dp"
        android:background="@drawable/purple_button"
        android:text="@string/register"
        android:textSize="25sp" />

    <Button
        android:id="@+id/login"
        style="@style/ButtonText"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/register"
        android:layout_alignBottom="@+id/register"
        android:layout_alignParentRight="true"
        android:layout_marginRight="30dp"
        android:background="@drawable/purple_button"
        android:text="@string/login"
        android:textSize="25sp" />

    <TextView
        android:id="@+id/message"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/email"
        android:layout_alignLeft="@+id/lblEmail"
        android:layout_alignParentRight="true"
        android:layout_marginBottom="64dp"
        android:textColor="#FF0000"
        android:textSize="25sp" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/message"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:contentDescription="@string/logo"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:src="@drawable/wlu_logo" />

</RelativeLayout>